# tt-projects

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  parse.py
cmake/: dependencies.cmake
sources/examples/: CMakeLists.txt
sources/examples/branch_test/: CMakeLists.txt  main.cpp
sources/examples/branch_test/kernels/: reader.cpp
sources/examples/gather/: CMakeLists.txt  main.cpp
sources/examples/gather/kernels/: reader.cpp
sources/examples/leftover_read/: CMakeLists.txt  main.cpp
sources/examples/leftover_read/kernels/: reader.cpp
sources/examples/leftover_test/: CMakeLists.txt  main.cpp
sources/examples/leftover_test/kernels/: reader.cpp
sources/examples/leftover_write/: CMakeLists.txt  main.cpp
sources/examples/leftover_write/kernels/: reader.cpp
sources/examples/sample_app/: main.cpp
sources/sample_lib/: CMakeLists.txt
sources/sample_lib/sample/: sample_class.cpp  sample_class.hpp
tests/: CMakeLists.txt  current_e2e_tests.cpp  current_test.cpp  hello_test.cpp
